<resources>
    <string name="app_name">Pocket’s goal are tasks and motivation</string>
    <string name="setup">setup</string>
    <string name="timeline">timeline</string>
    <string name="your_goals">your goals</string>
    <string name="title_activity_goals_setup">goalsSetup</string>
    <string name="lorem">Lorem ipsum dolor sit amet, his munere nostrum inimicus ad, volumus oportere similique id per.
        Atqui iriure ius cu. Enim tation vix cu. Ne sea accumsan albucius urbanitas.
    </string>
    <string name="next">Далее</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="intro75yearsLife">По данным ООН человек в среднем живет 75 лет.\n\nКаждый день мы упускаем возможности для реализации себя. Многие цели и задачи так и остаются всего лишь нашей мечтой.\n\nВы хотите узнать как приблизить себя к вашей мечте?</string>
    <string name="title_activity_inro_third">InroThird</string>
    <string name="intro2">Тогда мы наглядно вам покажем время вашей жизни, которое уже упущено. Это необходимо для осознания того, что пора начинать двигаться к вашим целям уже сегодня. </string>

    <string name="green_square">Зеленым – тот момент жизни, когда пора отдыхать наслаждаясь плодами своего труда.</string>
    <string name="red_squre">Красным цветом мы отметили годы жизни, которые уже прошли. </string>
    <string name="now_life">А между этими двумя периодами жизни, и находятся ваши цели.</string>

</resources>
