<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
            android:id="@+id/btn_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/setup"/>

    <Button
            android:id="@+id/btn_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/your_goals"/>

    <GridLayout
            android:columnCount="12"
            android:rowCount="71"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_goals"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/timeline"
            android:src="#8C9EFF"/>

</RelativeLayout>